Quorum/Library/Tests/Actions/Fail/MissingAction2.quorum
use A

number speed = 100
number time = 0.01
number newY = 0
A a
//newY = b:GetThing()                       // this line gives the "I could not locate the variable named b" and other errors (as it should)
newY = newY + speed * time * b:GetThing()   // this line does not